[gd_scene load_steps=7 format=3 uid="uid://c5fe63hkeydba"]

[ext_resource type="Script" path="res://HUD.gd" id="1_hs1yu"]
[ext_resource type="PackedScene" uid="uid://bummrjixce2qk" path="res://mob1.tscn" id="2_0oxe3"]
[ext_resource type="FontFile" uid="uid://cf1jho08gcpkn" path="res://font/space_invaders.ttf" id="2_squcy"]
[ext_resource type="PackedScene" uid="uid://bxeqagkuv7b8k" path="res://mob2.tscn" id="3_r1gkf"]
[ext_resource type="Texture2D" uid="uid://yjw0b3laovsq" path="res://SpaceShooterAssets/SpaceShooterAssetPack_IU.png" id="5_po6hg"]
[ext_resource type="Texture2D" uid="uid://80t5n2e38nca" path="res://SpaceShooterAssets/SpaceShooterAssetPack_Miscellaneous.png" id="6_2t82h"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hs1yu")
mob1 = ExtResource("2_0oxe3")
mob2 = ExtResource("3_r1gkf")

[node name="points" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -107.0
offset_top = 8.0
offset_right = -5.0
offset_bottom = 32.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_squcy")
theme_override_font_sizes/font_size = 15
text = "0"
horizontal_alignment = 2

[node name="life" type="Sprite2D" parent="."]
position = Vector2(44, 24.5001)
scale = Vector2(5, 5.62499)
texture = ExtResource("5_po6hg")
hframes = 12
vframes = 14
frame = 132

[node name="ColorRect" type="ColorRect" parent="life"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
anchors_preset = -1
anchor_left = -0.675
anchor_top = -0.425
anchor_right = -0.675
anchor_bottom = -0.425
offset_left = 4.26667
offset_top = 1.93333
offset_right = 17.2667
offset_bottom = 4.93333

[node name="life1" type="Sprite2D" parent="life"]
position = Vector2(-5.4, 0.133331)
scale = Vector2(0.44, 0.32)
texture = ExtResource("6_2t82h")
hframes = 15
vframes = 8
frame = 60

[node name="life2" type="Sprite2D" parent="life"]
position = Vector2(-3.1, 0.133316)
scale = Vector2(0.44, 0.32)
texture = ExtResource("6_2t82h")
hframes = 15
vframes = 8
frame = 60

[node name="life3" type="Sprite2D" parent="life"]
position = Vector2(-0.699999, 0.133331)
scale = Vector2(0.44, 0.32)
texture = ExtResource("6_2t82h")
hframes = 15
vframes = 8
frame = 60

[node name="life4" type="Sprite2D" parent="life"]
position = Vector2(1.7, 0.133316)
scale = Vector2(0.44, 0.32)
texture = ExtResource("6_2t82h")
hframes = 15
vframes = 8
frame = 60

[node name="life5" type="Sprite2D" parent="life"]
position = Vector2(4.1, 0.133331)
scale = Vector2(0.43, 0.32)
texture = ExtResource("6_2t82h")
hframes = 15
vframes = 8
frame = 60

[node name="game_over" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_squcy")
theme_override_font_sizes/font_size = 20
text = "GAME OVER"
